# working-sessions-website

./: .gitignore  .ruby-gemset  Capfile  Gemfile  bower.json  dkds-space.cabal  index.html  site.hs  slimlib.rb  stack.yaml  upload_to_myfutures_trade.sh  upload_to_workhardplay_pw.sh  workhardplay-pw.cabal  working-sessions.cabal
bower_components/mobile-detect/: .bower.json
config/: deploy.rb
config/deploy/: production.rb  staging.rb
css/: _app_settings.scss  _components-2017.scss  _description.scss  _index.scss  _index_2017.scss  _prelude-2017.scss  _schedule.scss  app.scss  archive-2017.scss
en/: index.html
en/2016/: index.slim
en/2017/: 404.slim  index.slim
en/shared/: _lang_switch.slim  _menu.slim
js/: app.js
lib/capistrano/plugin/: none_scm.rb
lib/capistrano/tasks/: none.rake
ru/2016/: archive.slim  index.slim
ru/2016/archive/: aliaxey-talstou-regional-studies-race.slim  anton-sorokin-product-placement.slim  inga-lindorenko-660099-forest.slim  pavel-khailo-open-air-political-games.slim
ru/2016/shared/: _schedule.html
ru/2017/: 404.slim  index.slim  invitation.slim
ru/shared/: _lang_switch.slim  _menu.slim
src/: site.hs
src/Site/: MultiLang.hs  SlimPage.hs  Types.hs
templates/: _header.slim  archive-item.slim  archive-project-en.slim  archive-project-ru.slim  archive-project.slim  archive-projects-list-item.slim  default.html  default.slim  header.html  index-en.html  index.html  page-en.slim  page-ru.slim  schedule-en.html  schedule.html
