name:               working-sessions
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  HS-Source-Dirs:   src
  build-depends:    base == 4.*
                  , hakyll == 4.8.*
                  , hakyll-sass == 0.2.*
                  , data-default
                  , hsass == 0.4.1
                  , aeson
                  , bytestring
                  , string-conversions
                  , filepath
                  , MissingH
  ghc-options:      -threaded
  default-language: Haskell2010
